--- a/EmployeeLogin/WebContent/training.xhtml
+++ b/EmployeeLogin/WebContent/training.xhtml
@@ -20,6 +20,7 @@
                 <h:form>
             
                     <h3 class="pageTitle">Training Materials</h3>
+                    <div class="trainIt">
                     <ul class="trainList">
                     	<li>Employee Comprehensive Intranet Training PDF: <a href="#{resource['images/WaystoneIntranetTraining.pdf']}" target="_blank" class="trainLink">View</a> 
                     		<a href="#{resource['images/WaystoneIntranetTraining.pdf']}" download="Intranet Training PDF" class="trainLink">  Download</a></li>
@@ -29,7 +30,22 @@
                     		<a href="#{resource['images/WaystoneAccountingTraining.pdf']}" download="Accounting Training PDF" class="trainLink">  Download</a></li>
                     	<li>Employee Profile Training PDF: <a href="#{resource['images/WaystoneProfileTraining.pdf']}" target="_blank" class="trainLink">View</a>
                     	 	<a href="#{resource['images/WaystoneProfileTraining.pdf']}" download="Employee Profile Training PDF" class="trainLink">  Download</a></li>
+                   </ul>
+                   </div>
+                   <br/><br/><br/>
+                   <h3 class="pageTitle">Company Documents</h3>
+                   <div class="trainIt">
+                   <ul class="trainList">
+                    	<li>Tenant Rental Application PDF: <a href="#{resource['images/rentalApp.pdf']}" target="_blank" class="trainLink">View</a>
+                    	 	<a href="#{resource['images/rentalApp.pdf']}" download="Rental Application PDF" class="trainLink">  Download</a></li>
+                    	<li>Tenant Rental Lease PDF: <a href="#{resource['images/rentalLease.pdf']}" target="_blank" class="trainLink">View</a>
+                    	 	<a href="#{resource['images/rentalLease.pdf']}" download="Rental Lease PDF" class="trainLink">  Download</a></li>
+                    	<li>Maintenance Request Form PDF (backup): <a href="#{resource['images/maintRequest.pdf']}" target="_blank" class="trainLink">View</a>
+                    	 	<a href="#{resource['images/maintRequest.pdf']}" download="Maintenance Request PDF" class="trainLink">  Download</a></li>
+                    	<li>Waystone Property Management History PDF: <a href="#{resource['images/waystoneHistory.pdf']}" target="_blank" class="trainLink">View</a>
+                    	 	<a href="#{resource['images/waystoneHistory.pdf']}" download="Waystone History PDF" class="trainLink">  Download</a></li>
             		</ul>
+            		</div>
                 </h:form>
             </ui:define>
             
