--- a/TenantPortal/WebContent/TenantEditPassword.xhtml
+++ b/TenantPortal/WebContent/TenantEditPassword.xhtml
@@ -1,5 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- 
+ * Roxanne Woodruff
+ * CSCI 2999 Capstone 
+ * Waystone Property Management Tenant Portal
+ * TenantEditPassword.xhtml
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -14,7 +20,7 @@
 	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form id="form">
-				<div class="empInfo">
+				<div class="tenInfo">
 					<h3 class="pageTitle">Edit Password</h3>
 					<div class="editBox" id="editPass">
 
@@ -27,13 +33,17 @@
 							<h:outputLabel for="password" value="Password:  " />
 							<h:inputSecret id="password" value="#{tenant.pwd}"
 								required="true" requiredMessage="Please enter a new password">
-								<f:validator binding="#{passwordValidator}" validatorId = "passwordValidator" />
+								<f:validator binding="#{passwordValidator}"
+									validatorId="passwordValidator" />
 								<f:attribute name="confirm" value="#{confirm}" />
 							</h:inputSecret>
 
 							<h:outputLabel for="confirm" value="Confirm Password:  " />
-							 <h:inputSecret id="confirm" binding="#{confirm}" required="true" requiredMessage = "Please re-enter new password" validatorMessage="Please enter password with at least 8 characters, one uppercase letter, one lowercase letter, and one digit."> 
-								<f:validateRegex pattern="\A(?=\S*?[0-9])(?=\S*?[a-z])(?=\S*?[A-Z])\S{8,}\z" />
+							<h:inputSecret id="confirm" binding="#{confirm}" required="true"
+								requiredMessage="Please re-enter new password"
+								validatorMessage="Please enter password with at least 8 characters, one uppercase letter, one lowercase letter, and one digit.">
+								<f:validateRegex
+									pattern="\A(?=\S*?[0-9])(?=\S*?[a-z])(?=\S*?[A-Z])\S{8,}\z" />
 							</h:inputSecret>
 						</h:panelGrid>
 
