--- a/TenantPortal/WebContent/TenantEditPayment.xhtml
+++ b/TenantPortal/WebContent/TenantEditPayment.xhtml
@@ -1,5 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- 
+ * Roxanne Woodruff
+ * CSCI 2999 Capstone 
+ * Waystone Property Management Tenant Portal
+ * TenantEditPayment.xhtml
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -14,7 +20,7 @@
 	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form id="form">
-				<div class="empInfo">
+				<div class="tenInfo">
 					<h3 class="pageTitle">Edit Saved Payment Method</h3>
 					<div class="profileBox">
 
@@ -136,7 +142,8 @@
 
 						</h:panelGroup>
 
-						<h:panelGrid layout="block" rendered="#{tenant.paymentType eq 'Credit Card' or tenant.paymentType eq 'Automated Clearing House'}">
+						<h:panelGrid layout="block"
+							rendered="#{tenant.paymentType eq 'Credit Card' or tenant.paymentType eq 'Automated Clearing House'}">
 							<!-- Billing Address -->
 							<h3>Billing address</h3>
 
