--- a/TenantPortal/WebContent/TenantMaintenance.xhtml
+++ b/TenantPortal/WebContent/TenantMaintenance.xhtml
@@ -1,5 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- 
+ * Roxanne Woodruff
+ * CSCI 2999 Capstone 
+ * Waystone Property Management Tenant Portal
+ * TenantMaintenance.xhtml
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -14,16 +20,15 @@
 	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form id="maintForm">
-				<div class="empInfo">
+				<div class="tenInfo">
 					<h1 class="pageTitle">Maintenance Request</h1>
 					<div class="editBox">
 
 						<!-- Use drop down menu -->
 						<h:panelGrid columns="5" columnClasses="mTypeLeft, mTypeRight">
 							<h:outputLabel value="Maintanence Type: " />
-							<h:selectOneMenu id="jobType"
-								value="#{tenant.maintJobType}" required="true"
-								requiredMessage="Maintanence Type is required!"
+							<h:selectOneMenu id="jobType" value="#{tenant.maintJobType}"
+								required="true" requiredMessage="Maintanence Type is required!"
 								validatorMessage="Please choose a maintenance type">
 								<f:selectItem itemValue="" />
 								<f:selectItem itemValue="Electric" />
@@ -37,22 +42,22 @@
 						<!-- Use text area -->
 						<h:panelGrid columns="2" columnClasses="mDescLeft, mDescRight">
 							<h:outputLabel>Job Description:</h:outputLabel>
-							<h:inputTextarea id="jobDesc"
-								style="width:400px; height:50px;"
+							<h:inputTextarea id="jobDesc" style="width:400px; height:50px;"
 								value="#{tenant.maintJobDesc}" />
 						</h:panelGrid>
 
 						<!-- Use Calendar -->
-						<h:panelGrid class="editInfo" columns="2" columnClasses="mReqDateLeft, mReqDateRight">
+						<h:panelGrid class="editInfo" columns="2"
+							columnClasses="mReqDateLeft, mReqDateRight">
 							<h:outputText value="Availability Date:  " />
 							<h:inputText id="availDate" value="#{tenant.maintDate}"
-								required = "true" class="availDate" size="10"
+								required="true" class="availDate" size="10"
 								requiredMessage="Date is required!"
 								validatorMessage="Please enter digits in the form of 1999-01-01 for Availability Date">
 								<f:validateRegex pattern="\d{4}-\d{2}-\d{2}" />
 							</h:inputText>
 						</h:panelGrid>
-						
+
 						<h:panelGrid class="warning" columns="1">
 							<h:message for="jobType" />
 							<h:message for="jobDesc" />
@@ -61,7 +66,8 @@
 
 						<!-- Use command button -->
 						<h:panelGrid columns="2">
-							<h:commandButton value="Submit" action="#{tenant.insertMaintenanceRequest(tenant, tenantProfObj.tenantID)}"/>
+							<h:commandButton value="Submit"
+								action="#{tenant.insertMaintenanceRequest(tenant, tenantProfObj.tenantID)}" />
 							<h:commandButton value="Clear" type="reset" />
 						</h:panelGrid>
 					</div>
