--- a/TenantPortal/WebContent/TenantProfile.xhtml
+++ b/TenantPortal/WebContent/TenantProfile.xhtml
@@ -1,5 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- 
+ * Roxanne Woodruff
+ * CSCI 2999 Capstone 
+ * Waystone Property Management Tenant Portal
+ * TenantProfile.xhtml
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
@@ -12,7 +18,7 @@
 	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form id="form">
-				<div class="empInfo">
+				<div class="tenInfo">
 					<h1 class="pageTitle">Profile</h1>
 					<div class="editBox">
 
@@ -56,6 +62,8 @@
 							<h:commandButton value="Edit Saved Payment Method"
 								action="TenantEditPayment" /> -->
 						</h:panelGrid>
+
+
 					</div>
 				</div>
 			</h:form>
