--- a/TenantPortal/WebContent/index.xhtml
+++ b/TenantPortal/WebContent/index.xhtml
@@ -1,21 +1,28 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- 
+ * Roxanne Woodruff
+ * CSCI 2999 Capstone 
+ * Waystone Property Management Tenant Portal
+ * index.xhtml
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-	<h:outputStylesheet name="waystoneTenant.css" library="css" />
-	<link rel="icon" type ="image/x-icon" href="#{resources['images/Way1.png']}"/>
+	<script type="text/javascript"
+		src="#{request.contextPath}/resources/js/waystoneTenant.js"></script>
 	<title>Tenant Portal Login</title>
+	<h:outputStylesheet library="css" name="waystoneTenant.css" />
 </h:head>
 <h:body class="tenantBack">
-	<h:form id="loginForm">
-		
+	<h:form id="form">
 		<div id="loginTop">
 			<div>
-				<img src="images/Way1.png" alt="WPM Logo" class="topLogo" />
+				<img src="#{resource['images/Way1.png']}" alt="WPM Logo"
+					class="topLogo" />
 			</div>
-			<div class="title" id="loginTitle">Waystone Property Management</div>
+			<div class="title" id="loginTitle">WAYSTONE PROPERTY MANAGEMENT</div>
 		</div>
 
 		<div class="shadowBox">
@@ -39,8 +46,8 @@
 			<h:panelGrid columns="2">
 				<h:commandButton action="#{tenant.validateUsernamePassword}"
 					value="Login"></h:commandButton>
-				<!--<h:commandButton class="centerAlign" value="Reset Password"
-					action="TenantResetPassword" />  -->
+
+				<!-- 				<h:commandButton value="Reset Password" action="TenantResetPassword" /> -->
 			</h:panelGrid>
 		</div>
 
