--- a/TenantPortal/WebContent/TenantHelp.xhtml
+++ b/TenantPortal/WebContent/TenantHelp.xhtml
@@ -20,8 +20,7 @@
 		<ui:define name="content">
 			<h:form id="form">
 				<div class="tenInfo">
-					<h3 class="pageTitle">My Property Management Contact
-						Information</h3>
+					<h3 class="pageTitle">Local Office Contact Information</h3>
 					<div class="editBox">
 						<ui:repeat
 							value="#{tenant.getTenantPropertyUnit(tenantProfObj.tenantID)} ">
