--- a/EmployeeLogin/WebContent/employeePasswordEdit.xhtml
+++ b/EmployeeLogin/WebContent/employeePasswordEdit.xhtml
@@ -56,7 +56,7 @@
                         <h:message for="confirm" style="color:red;" /> 
                      </h:panelGrid>   
                         <h:commandButton value="Update" action="#{employee.updatePassword}" class="confirmUpdate"/>
-                        <h:commandButton onclick="history.back(); return false;" value="Cancel"/>
+                        <h:commandButton action="employeeProfile" value="Cancel" immediate="true"/>
                                            
                    
                     </div>
