--- a/EmployeeLogin/WebContent/searchInventory.xhtml
+++ b/EmployeeLogin/WebContent/searchInventory.xhtml
@@ -77,7 +77,7 @@
                     </h:column>
                     <h:column>
                     	<f:facet name="header">Delete Item</f:facet>
-                    	<h:commandButton action="#{inventory.deleteInventory(invListObj.assetNum)}" value="Delete" class="delete"/>
+                    	<h:commandButton action="#{inventory.deleteInventory(invListObj.assetNum)}" value="Delete" class="deleteInv"/>
                     </h:column>
                 </h:dataTable>
                 </h:form>
