--- a/EmployeeLogin/WebContent/training.xhtml
+++ b/EmployeeLogin/WebContent/training.xhtml
@@ -40,8 +40,10 @@
                     	 	<a href="#{resource['images/rentalApp.pdf']}" download="Rental Application PDF" class="trainLink">  Download</a></li>
                     	<li>Tenant Rental Lease PDF: <a href="#{resource['images/rentalLease.pdf']}" target="_blank" class="trainLink">View</a>
                     	 	<a href="#{resource['images/rentalLease.pdf']}" download="Rental Lease PDF" class="trainLink">  Download</a></li>
+                    	<li>Apartment Inspection Checklist PDF: <a href="#{resource['images/ApartmentChecklist.pdf']}" target="_blank" class="trainLink">View</a>
+                    	 	<a href="#{resource['images/ApartmentChecklist.pdf']}" download="Apartment Checklist PDF" class="trainLink">  Download</a></li>
                     	<li>Maintenance Request Form PDF (backup): <a href="#{resource['images/maintRequest.pdf']}" target="_blank" class="trainLink">View</a>
-                    	 	<a href="#{resource['images/maintRequest.pdf']}" download="Maintenance Request PDF" class="trainLink">  Download</a></li>
+                            <a href="#{resource['images/maintRequest.pdf']}" download="Maintenance Request PDF" class="trainLink">  Download</a></li>
                     	<li>Waystone Property Management History PDF: <a href="#{resource['images/waystoneHistory.pdf']}" target="_blank" class="trainLink">View</a>
                     	 	<a href="#{resource['images/waystoneHistory.pdf']}" download="Waystone History PDF" class="trainLink">  Download</a></li>
             		</ul>
