--- a/EmployeeLogin/WebContent/viewAccount.xhtml
+++ b/EmployeeLogin/WebContent/viewAccount.xhtml
@@ -44,7 +44,7 @@
                         </div>
                         <br/><br/>
                         <div class="delete">    
-                                <h:commandButton value="Delete Account" action="#{account.deleteAccount(accViewObj)}" class="confirmAccount" />
+                                <h:commandButton value="Delete Account" action="#{account.deleteAccount(accViewObj, empRecordObj.employeeID)}" class="confirmAccount" />
                                 
                         </div>
                         </div>
