--- a/EmployeeLogin/WebContent/maintenanceRequests.xhtml
+++ b/EmployeeLogin/WebContent/maintenanceRequests.xhtml
@@ -86,7 +86,7 @@
                     </h:column>                  
                     </h:dataTable>
                     
-                    <h3 class="pageTitle">Assigned Requests</h3>
+                    <h3 class="pageTitle">My Assigned Requests</h3>
                     <h:dataTable value="#{maintenance.getCurrentEmpMainList(empRecordObj.employeeID)}" var="current"
                                  styleClass = "table" headerClass="table-header" rowClasses="table-odd,table-even"
                                  columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, dateR, startDate, removeReq">
@@ -133,7 +133,7 @@
                     	<h:commandButton action="#{maintenance.endMainRequest(current, empRecordObj.employeeID)}" value="Done" class="done"/>
                     </h:column>                  
                     </h:dataTable>
-                    <h3 class="pageTitle">Finished Requests</h3>
+                    <h3 class="pageTitle">My Finished Requests</h3>
                     <h:dataTable value="#{maintenance.getDoneEmpMainList(empRecordObj.employeeID)}" var="done"
                                  styleClass = "table" headerClass="table-header" rowClasses="table-odd,table-even"
                                  columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, finishR">
