--- a/EmployeeLogin/WebContent/searchEmployees.xhtml
+++ b/EmployeeLogin/WebContent/searchEmployees.xhtml
@@ -57,27 +57,27 @@
                                  columnClasses="email, empID, firstName, lastName, city, state">
                     <h:column> 
                         <f:facet name="header">Email</f:facet>
-                        <h:commandLink value="#{empRecObj.email}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID)}" class="table-link"/>
+                        <h:commandLink value="#{empRecObj.email}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID, empRecObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Employee ID</f:facet>
-                        <h:commandLink value="#{empRecObj.employeeID}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID)}" class="table-link"/>
+                        <h:commandLink value="#{empRecObj.employeeID}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID, empRecObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">First Name</f:facet>
-                        <h:commandLink value="#{empRecObj.firstName}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID)}" class="table-link"/>
+                        <h:commandLink value="#{empRecObj.firstName}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID, empRecObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Last Name</f:facet>
-                        <h:commandLink value="#{empRecObj.lastName}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID)}" class="table-link"/>
+                        <h:commandLink value="#{empRecObj.lastName}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID, empRecObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">City</f:facet>
-                        <h:commandLink value="#{empRecObj.city}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID)}" class="table-link"/>
+                        <h:commandLink value="#{empRecObj.city}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID, empRecObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">State</f:facet>
-                        <h:commandLink value="#{empRecObj.state}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID)}" class="table-link"/>
+                        <h:commandLink value="#{empRecObj.state}" action="#{employee.viewEmployeeRecord(empRecObj.employeeID, empRecObj.email)}" class="table-link"/>
                     </h:column>
                 </h:dataTable>
                 <img id="loader" src="#{resource['images/Spinner.gif']}" style="display:none" />
