--- a/EmployeeLogin/WebContent/tenantAccounts.xhtml
+++ b/EmployeeLogin/WebContent/tenantAccounts.xhtml
@@ -58,40 +58,40 @@
                                  columnClasses="email, tenantID, firstName, lastName, building, apartment, city, state, phone">
                     <h:column> 
                         <f:facet name="header">Email</f:facet>
-                        <h:commandLink value="#{tenRecordObj.email}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.email}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         
                         <f:facet name="header">Tenant ID</f:facet>
-                        <h:commandLink value="#{tenRecordObj.tenantID}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.tenantID}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">First Name</f:facet>
-                        <h:commandLink value="#{tenRecordObj.firstName}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.firstName}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Last Name</f:facet>
-                        <h:commandLink value="#{tenRecordObj.lastName}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.lastName}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Building</f:facet>
-                        <h:commandLink value="#{tenRecordObj.building}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.building}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Apt No.</f:facet>
-                        <h:commandLink value="#{tenRecordObj.aptNum}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.aptNum}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                         <h:column> 
                         <f:facet name="header">City</f:facet>
-                        <h:commandLink value="#{tenRecordObj.permCity}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.permCity}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">State</f:facet>
-                        <h:commandLink value="#{tenRecordObj.permState}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.permState}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Phone Number</f:facet>
-                        <h:commandLink value="#{tenRecordObj.phone}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID)}" class="table-link"/>
+                        <h:commandLink value="#{tenRecordObj.phone}" action="#{tenant.viewTenantRecord(tenRecordObj.tenantID, tenRecordObj.email)}" class="table-link"/>
                     </h:column>
                 </h:dataTable>
                     <img id="loader" src="#{resource['images/Spinner.gif']}" style="display:none" />
