--- a/EmployeeLogin/WebContent/units.xhtml
+++ b/EmployeeLogin/WebContent/units.xhtml
@@ -44,32 +44,32 @@
                                  columnClasses="unit, building, apartment, city, state, rent, tenName">
                     <h:column> 
                         <f:facet name="header">Unit ID</f:facet>
-                        <h:commandLink value="#{unitObj.unitID}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <h:commandLink value="#{unitObj.unitID}" action="#{unit.viewUnitRecord(unitObj.unitID, unitObj.unitBuilding)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         
                         <f:facet name="header">Building</f:facet>
-                        <h:commandLink value="#{unitObj.unitBuilding}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <h:commandLink value="#{unitObj.unitBuilding}" action="#{unit.viewUnitRecord(unitObj.unitID, unitObj.unitBuilding)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Apt No.</f:facet>
-                        <h:commandLink value="#{unitObj.unitAptNum}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <h:commandLink value="#{unitObj.unitAptNum}" action="#{unit.viewUnitRecord(unitObj.unitID, unitObj.unitBuilding)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">City</f:facet>
-                        <h:commandLink value="#{unitObj.unitCity}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <h:commandLink value="#{unitObj.unitCity}" action="#{unit.viewUnitRecord(unitObj.unitID, unitObj.unitBuilding)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">State</f:facet>
-                        <h:commandLink value="#{unitObj.unitState}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <h:commandLink value="#{unitObj.unitState}" action="#{unit.viewUnitRecord(unitObj.unitID, unitObj.unitBuilding)}" class="table-link"/>
                     </h:column>
                         <h:column> 
                         <f:facet name="header">Rent</f:facet>
-                        <h:commandLink value="#{unitObj.unitRent}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <h:commandLink value="#{unitObj.unitRent}" action="#{unit.viewUnitRecord(unitObj.unitID, unitObj.unitBuilding)}" class="table-link"/>
                     </h:column>
                     <h:column> 
                         <f:facet name="header">Tenant Name</f:facet>
-                        <h:commandLink value="#{unitObj.unitTenLastName}, #{unitObj.unitTenFirstName}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <h:commandLink value="#{unitObj.unitTenLastName}, #{unitObj.unitTenFirstName}" action="#{unit.viewUnitRecord(unitObj.unitID, unitObj.unitBuilding)}" class="table-link"/>
                     </h:column>
                     
                 </h:dataTable>
