--- a/EmployeeLogin/WebContent/viewRecord.xhtml
+++ b/EmployeeLogin/WebContent/viewRecord.xhtml
@@ -78,7 +78,7 @@
                             </div>
                             <br/><br/>
                             <div class="delete">    
-                                <h:commandButton value="Delete Record" action="#{record.deleteRecord(recViewObj)}" class="confirm"   rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}"/>
+                                <h:commandButton value="Delete Record" action="#{record.deleteRecord(recViewObj, empRecordObj.employeeID)}" class="confirmRec"   rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}"/>
                             </div>
                         </div>                
                        
