--- a/EmployeeLogin/WebContent/training.xhtml
+++ b/EmployeeLogin/WebContent/training.xhtml
@@ -22,14 +22,16 @@
                     <h3 class="pageTitle">Training Materials</h3>
                     <div class="trainIt">
                     <ul class="trainList">
-                    	<li>Employee Comprehensive Intranet Training PDF: <a href="#{resource['images/WaystoneIntranetTraining.pdf']}" target="_blank" class="trainLink">View</a> 
-                    		<a href="#{resource['images/WaystoneIntranetTraining.pdf']}" download="Intranet Training PDF" class="trainLink">  Download</a></li>
-                    	<li>Maintenance Training PDF: <a href="#{resource['images/WaystoneMaintenanceTraining.pdf']}" target="_blank" class="trainLink">View</a> 
-                    		<a href="#{resource['images/WaystoneMaintenanceTraining.pdf']}" download="Maintenance Training PDF" class="trainLink">  Download</a></li>
-                    	<li>Accounting Training PDF: <a href="#{resource['images/WaystoneAccountingTraining.pdf']}" target="_blank" class="trainLink">View</a>
-                    		<a href="#{resource['images/WaystoneAccountingTraining.pdf']}" download="Accounting Training PDF" class="trainLink">  Download</a></li>
-                    	<li>Employee Profile Training PDF: <a href="#{resource['images/WaystoneProfileTraining.pdf']}" target="_blank" class="trainLink">View</a>
-                    	 	<a href="#{resource['images/WaystoneProfileTraining.pdf']}" download="Employee Profile Training PDF" class="trainLink">  Download</a></li>
+                    	<li>Employee Comprehensive Intranet Training PDF: <a href="#{resource['images/Waystone Intranet Training.pdf']}" target="_blank" class="trainLink">View</a> 
+                    		<a href="#{resource['images/Waystone Intranet Training.pdf']}" download="Intranet Training PDF" class="trainLink">  Download</a></li>
+                    	<li>Maintenance Training PDF: <a href="#{resource['images/Waystone Maintenance Training.pdf']}" target="_blank" class="trainLink">View</a> 
+                    		<a href="#{resource['images/Waystone Maintenance Training.pdf']}" download="Maintenance Training PDF" class="trainLink">  Download</a></li>
+                    	<li>Accounting Training PDF: <a href="#{resource['images/Waystone Accounts Training.pdf']}" target="_blank" class="trainLink">View</a>
+                    		<a href="#{resource['images/Waystone Accounts Training.pdf']}" download="Accounting Training PDF" class="trainLink">  Download</a></li>
+                    	<li>Human Resources Training PDF: <a href="#{resource['images/Waystone HR Training.pdf']}" target="_blank" class="trainLink">View</a>
+                    	 	<a href="#{resource['images/Waystone HR Training.pdf']}" download="HR Training PDF" class="trainLink">  Download</a></li>
+                    	<li>Office Staff Training PDF: <a href="#{resource['images/Waystone Office Training.pdf']}" target="_blank" class="trainLink">View</a>
+                            <a href="#{resource['images/Waystone Office Training.pdf']}" download="Office Training PDF" class="trainLink">  Download</a></li>
                    </ul>
                    </div>
                    <br/><br/><br/>
